# easybuilder

./: README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
docs/: conf.py  index.rst  usage.rst
docs/api/: checker.rst  index.rst  task.rst
src/easybuilder/: checker.py
tests/: test_checker.py
